Fixed the agent string word wrap. Every once in a while, the string would not wrap to a new line upon page load. This seems to be the right way to fix that.

--- a/codepulse/src/main/resources/toserve/widgets/TraceConnectorUI/ConnectionHelpForm.css
+++ b/codepulse/src/main/resources/toserve/widgets/TraceConnectorUI/ConnectionHelpForm.css
@@ -20,6 +20,7 @@
 	display: block;
 	padding: .5em;
 	white-space: pre;
+	word-wrap: break-word;
 	overflow-wrap: break-word;
 }
 
